--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -13,6 +13,16 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: 12
+      - name: Install dependencies
+        run: npm install
+#      - name: Set AWS credentials
+#        uses: aws-actions/configure-aws-credentials@v1
+#        with:
+#          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#          aws-region: us-west-1
+#      - name: Deploy to S3
+#        run: npm run deploy
           
 #  Explore-GitHub-Actions:
 #    runs-on: ubuntu-latest
