--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -5,9 +5,10 @@ on:
     branches:
       - main
 jobs:
-  build:
+  deploy-website:
     runs-on: ubuntu-latest
     timeout-minutes: 10
+    environment: production
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
