--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -29,14 +29,12 @@ jobs:
           folder: app/src
           bucket: ${{ secrets.S3_BUCKET }}
           bucket-region: ${{ secrets.S3_BUCKET_REGION }}
-#          dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
-#          invalidation: /
+          dist-id: ${{ secrets.CLOUDFRONT_DISTRIBUTION_ID }}
+          invalidation: /
           delete-removed: true
           no-cache: true
           private: true
           files-to-include: '{.*/**,**}'
-#      - name: Deploy to S3
-#        run: npm run deploy
 #
 #  Explore-GitHub-Actions:
 #    runs-on: ubuntu-latest
