--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -8,7 +8,7 @@ on:
       
 jobs:
   measure-code:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 10
     environment: production
     
@@ -17,7 +17,7 @@ jobs:
         run: echo "TODO - implement code metrics via SonarQube"
 
   test-code:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 10
     environment: production
     
@@ -26,7 +26,7 @@ jobs:
         run: echo "TODO - implement code testing via Jest"
 
   test-security:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 10
     environment: production
     
@@ -35,7 +35,7 @@ jobs:
         run: echo "TODO - implement security testing via Snyk (maybe?)"
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 10
     environment: production
     needs: [measure-code, test-code, test-security]
@@ -67,7 +67,7 @@ jobs:
           files-to-include: '{.*/**,**}'
   
   smoke-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     timeout-minutes: 10
     environment: production
     needs: deploy
