--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -70,7 +70,7 @@ jobs:
           files-to-include: '{.*/**,**}'
   
   smoke-test:
-    runs-on: ubuntu-24.04
+    runs-on: $DEFAULT_RUNNER
     timeout-minutes: 10
     environment: production
     needs: deploy
