--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -8,7 +8,7 @@ on:
       
 jobs:
   measure-code:
-    runs-on: ${{ env.DEFAULT_RUNNER }}
+    runs-on: $DEFAULT_RUNNER
     timeout-minutes: 10
     environment: production
     
@@ -70,7 +70,7 @@ jobs:
           files-to-include: '{.*/**,**}'
   
   smoke-test:
-    runs-on: ${{ env.DEFAULT_RUNNER }}
+    runs-on: ubuntu-24.04
     timeout-minutes: 10
     environment: production
     needs: deploy
