--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -6,6 +6,10 @@ on:
     branches:
       - main
       
+env:
+  RUNNER_OS: ubuntu
+  RUNNER_OS_VERSION: 24.04
+      
 jobs:
   measure-code:
     runs-on: ubuntu-24.04
@@ -16,7 +20,7 @@ jobs:
       - name: Gather metrics
         run: echo "TODO - implement code metrics via SonarQube"
       - name: log 
-        run: echo ${{ vars.RUNNER_OS }}-${{ vars.RUNNER_OS_VERSION }}
+        run: echo ${{ env.RUNNER_OS }}-${{ env.RUNNER_OS_VERSION }}
 
   test-code:
     runs-on: ubuntu-24.04
