--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -6,25 +6,18 @@ on:
     branches:
       - main
       
-env:
-  DEFAULT_RUNNER: ubuntu-24.04
-  RUNNER_OS: ubuntu
-  RUNNER_OS_VERSION: 24.04
-      
 jobs:
   measure-code:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     environment: production
     
     steps:
       - name: Gather metrics
         run: echo "TODO - implement code metrics via SonarQube"
-      - name: log runner
-        run: echo $DEFAULT_RUNNER
 
   test-code:
-    runs-on: $DEFAULT_RUNNER
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     environment: production
     
@@ -33,7 +26,7 @@ jobs:
         run: echo "TODO - implement code testing via Jest"
 
   test-security:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     environment: production
     
@@ -42,7 +35,7 @@ jobs:
         run: echo "TODO - implement security testing via Snyk (maybe?)"
 
   deploy:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     environment: production
     needs: [measure-code, test-code, test-security]
@@ -77,7 +70,7 @@ jobs:
           files-to-include: '{.*/**,**}'
   
   smoke-test:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     timeout-minutes: 10
     environment: production
     needs: deploy
