--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -22,6 +22,14 @@ jobs:
     environment: production
     
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 23.4.0
+          
+      - name: Install dependencies
+        run: npm install
+        
       - name: Test code
         run: npm test
 
@@ -31,6 +39,14 @@ jobs:
     environment: production
     
     steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 23.4.0
+          
+      - name: Install dependencies
+        run: npm install
+        
       - name: Test application security
         run: echo "TODO - implement security testing via Snyk (maybe?)"
 
@@ -41,8 +57,8 @@ jobs:
     needs: [measure-code, test-code, test-security]
     
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: 23.4.0
           
