--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -13,6 +13,16 @@ jobs:
     environment: production
     
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+        
+      - name: Configure node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 23.4.0
+          
+      - name: Install dependencies
+        run: npm install
       - name: Gather metrics
         run: echo "TODO - implement code metrics via SonarQube"
 
@@ -22,8 +32,11 @@ jobs:
     environment: production
     
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Check out code
+        uses: actions/checkout@v4
+        
+      - name: Configure node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 23.4.0
           
@@ -39,8 +52,11 @@ jobs:
     environment: production
     
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Check out code
+        uses: actions/checkout@v4
+        
+      - name: Configure node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 23.4.0
           
