--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -33,8 +33,8 @@ jobs:
       #   with:
       #     node-version: 23.4.0
           
-      # - name: Install dependencies
-      #   run: npm install
+      - name: Install dependencies
+        run: npm install
         
       - name: Test code
         run: npm test
