--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -1,4 +1,4 @@
-name: Website release [production]
+name: ADC web application release [production]
 run-name: ${{ github.actor }} is deploying the ADC web application to production
 on:
   workflow_dispatch:
@@ -27,11 +27,6 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-        
-      # - name: Configure node.js
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: 23.4.0
           
       - name: Install dependencies
         run: npm install
@@ -88,23 +83,6 @@ jobs:
       with:
         category: "/language:${{matrix.language}}"
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  
-
-
   deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 10
@@ -114,11 +92,6 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-        
-      # - name: Configure node.js
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: 23.4.0
           
       - name: Install dependencies
         run: npm install
