--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
           
+      - name: Install dependencies
+        run: npm install
+
+      - name: Test and coverage
+        run: npm jest --coverage
+          
       - name: SonarQube scan
         uses: SonarSource/sonarqube-scan-action@v4
         env:
