--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -22,7 +22,7 @@ jobs:
         run: npm install
 
       - name: Test and coverage
-        run: npm jest --coverage
+        run: npm test
           
       - name: SonarQube scan
         uses: SonarSource/sonarqube-scan-action@v4
