--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=ascensus-digital-consulting_adc-website
 sonar.organization=ascensus-digital-consulting
-sonar.exclusions=coverage/*
+sonar.exclusions=coverage/*, app/test/*
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=adc-website
