--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,7 @@
 sonar.projectKey=ascensus-digital-consulting_adc-website
 sonar.organization=ascensus-digital-consulting
 sonar.exclusions=coverage/*, app/test/*
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=adc-website
