--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -83,7 +83,7 @@ jobs:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     environment: production
-    needs: [measure-code, test-code, test-security]
+    needs: [test-code, test-security]
     
     steps:
       - name: Checkout repository
