--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -129,4 +129,4 @@ jobs:
     
     steps:
       - name: Smoke test
-        run: bash app/test/scripts/smoke-test.sh
+        run: bash app/test/scripts/smoke-test.sh https://ascensus.digital
