--- a/.github/workflows/protect-branch-main.yml
+++ b/.github/workflows/protect-branch-main.yml
@@ -13,7 +13,7 @@ jobs:
         run: |
           ALLOWED_BRANCH="stage"
           if [[ $GIT_REFLOG_ACTION == *merge* ]]; then
-          	if [[ $GIT_REFLOG_ACTION == *$ALLOWED_BRANCH* ]]; then
+          	if [[ $GIT_REFLOG_ACTION != *$ALLOWED_BRANCH* ]]; then
           		echo
           		echo \# STOP THE PRESSES!
           		echo \#
