--- a/.github/workflows/protect-branch-main.yml
+++ b/.github/workflows/protect-branch-main.yml
@@ -12,18 +12,11 @@ jobs:
       - name: Check branch
         run: |
           ALLOWED_BRANCH="stage"
-          if [[ $GIT_REFLOG_ACTION == *merge* ]]; then
-          	if [[ $GIT_REFLOG_ACTION == *$ALLOWED_BRANCH* ]]; then
-          		echo
-          		echo \# STOP THE PRESSES!
-          		echo \#
-          		echo \# You are trying to merge from: \"$ALLOWED_BRANCH\"
-          		echo \# Surely you don\'t mean that?
-          		echo \#
-          		echo \# Run the following command now to discard your working tree changes:
-          		echo \#
-          		echo \# git reset --merge
-          		echo
-          		exit 1
-          	fi
+          	if [[ $GITHUB_HEAD_REF != $ALLOWED_BRANCH ]]; then
+				echo
+				echo \#
+				echo \# Branch "main" may not be merged with branch \"$ALLOWED_BRANCH\"
+				echo \#
+				echo
+				exit 1
           fi
