--- a/.github/workflows/protect-branch-main.yml
+++ b/.github/workflows/protect-branch-main.yml
@@ -12,11 +12,10 @@ jobs:
       - name: Check branch
         run: |
           ALLOWED_BRANCH="stage"
-            if [[ $GIT_REFLOG_ACTION == *$ALLOWED_BRANCH* ]]; then
+            if [[ $GITHUB_HEAD_REF != $ALLOWED_BRANCH ]]; then
               echo
               echo \#
-              echo \# Merging from \"main\" to \"$ALLOWED_BRANCH\" is prohibited.
-              echo \#
+              echo \# Merging from \"$GITHUB_HEAD_REF\" to \"main\" is prohibited.
               echo \#
               echo
               exit 1
