--- a/.github/workflows/protect-branch-main.yml
+++ b/.github/workflows/protect-branch-main.yml
@@ -14,11 +14,10 @@ jobs:
           ALLOWED_BRANCH="stage"
           echo GITHUB_HEAD_REF = $GITHUB_HEAD_REF
           echo ALLOWED_BRANCH = $ALLOWED_BRANCH
-          echo GIT_REFLOG_ACTION = $GIT_REFLOG_ACTION
             if [[ $GIT_REFLOG_ACTION == $ALLOWED_BRANCH ]]; then
               echo
               echo \#
-              echo \# Merging from \"$ALLOWED_BRANCH\" to \"main\" is prohibited.
+              echo \# Merging from \"$GITHUB_HEAD_REF\" to \"main\" is prohibited.
               echo \#
               echo
               exit 1
