--- a/.github/workflows/protect-branch-main.yml
+++ b/.github/workflows/protect-branch-main.yml
@@ -12,14 +12,17 @@ jobs:
       - name: Check branch
         run: |
           ALLOWED_BRANCH="stage"
+          
+          echo GITHUB_REF = $GITHUB_REF
+          echo GITHUB_BASE_REF = $GITHUB_BASE_REF
           echo GITHUB_HEAD_REF = $GITHUB_HEAD_REF
           echo ALLOWED_BRANCH = $ALLOWED_BRANCH
-          echo GIT_REFLOG_ACTION = $GIT_REFLOG_ACTION
-            if [[ $GIT_REFLOG_ACTION == $ALLOWED_BRANCH ]]; then
-              echo
-              echo \#
-              echo \# Merging from \"$ALLOWED_BRANCH\" to \"main\" is prohibited.
-              echo \#
-              echo
-              exit 1
-           fi
+          
+#            if [[ $GITHUB_HEAD_REF != $ALLOWED_BRANCH ]]; then
+#              echo
+#              echo \#
+#              echo \# Merging from \"$GITHUB_HEAD_REF\" to \"main\" is prohibited.
+#              echo \#
+#              echo
+#              exit 1
+#           fi
