--- a/.github/workflows/protect-branch-main.yml
+++ b/.github/workflows/protect-branch-main.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Check branch
         run: |
+          export TERM=xterm-256color
           ALLOWED_BRANCH="stage"
           
           echo GITHUB_BASE_REF = $GITHUB_BASE_REF
