--- a/.github/workflows/protect-branch-main.yml
+++ b/.github/workflows/protect-branch-main.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - name: Check branch
         run: |
+          export TERM=xterm-256color
           ALLOWED_BRANCH="stage"
           
           echo GITHUB_BASE_REF = $GITHUB_BASE_REF
@@ -18,9 +19,11 @@ jobs:
           echo ALLOWED_BRANCH = $ALLOWED_BRANCH
           
             if [[ $GITHUB_HEAD_REF != $ALLOWED_BRANCH ]]; then
-              echo
               tput setaf 1
               echo Merging from \"$GITHUB_HEAD_REF\" to \"$GITHUB_BASE_REF\" is prohibited.
-              echo
               exit 1
+            else
+              tput setaf 2
+              echo Merging from \"$GITHUB_HEAD_REF\" to \"$GITHUB_BASE_REF\" is allowed.
+              exit 0              
            fi
