--- a/.github/workflows/protect-branch-main.yml
+++ b/.github/workflows/protect-branch-main.yml
@@ -1,5 +1,5 @@
-name: Enforce branch merge constraints
-run-name: ${{ github.actor }} is validating merge constraints ${{ github.base_ref }}<--${{ github.head_ref }}
+name: Enforce merge constraints
+run-name: ${{ github.actor }} is enforcing merge constraints ${{ github.base_ref }}<--${{ github.head_ref }}
 
 on:
   pull_request:
