decompose workflow files

--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -7,6 +7,6 @@ on:
 jobs:
   deploy-production:
     name: deploy
-    uses: ./deploy.yml
+    uses: ./.github/workflows/deploy.yml
     with:
       environment: 'production'
