change workflow trigger

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: ADC web application build
 run-name: Build ADC web application [@${{ github.actor }}]
 on:
   workflow_dispatch:
-  pull_request:
+  push:
     branches:
       - main
 
