--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -86,7 +86,7 @@ jobs:
         with:
           category: '/language:${{matrix.language}}'
 
-  test-code:
+  tag-with-version:
     runs-on: ubuntu-latest
     timeout-minutes: 10
 
