--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -89,7 +89,8 @@ jobs:
   test-code:
     runs-on: ubuntu-latest
     timeout-minutes: 10
-
+    needs: [test-code, test-security]
+    
     steps:
       - name: Tag with version
         uses: paulhatch/semantic-version@v5.4.0
