--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -110,7 +110,7 @@ jobs:
           version_format: '${major}.${minor}.${patch}'
           # Optional path to check for changes. If any changes are detected in the path the
           # 'changed' output will true. Enter multiple paths separated by spaces.
-          change_path: 'app/src'
+          change_path: '../app/src'
           # Named version, will be used as suffix for name version tag
           namespace: adc-web
           # If this is set to true, *every* commit will be treated as a new version.
