--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -110,7 +110,7 @@ jobs:
           version_format: '${major}.${minor}.${patch}'
           # Optional path to check for changes. If any changes are detected in the path the
           # 'changed' output will true. Enter multiple paths separated by spaces.
-          change_path: '../app/src'
+          #change_path: '../app/src'
           # Named version, will be used as suffix for name version tag
           namespace: adc-web
           # If this is set to true, *every* commit will be treated as a new version.
@@ -118,13 +118,13 @@ jobs:
           # If bump_each_commit is also set to true, setting this value will cause the version to increment only if the pattern specified is matched.
           bump_each_commit_patch_pattern: ''
           # If true, the body of commits will also be searched for major/minor patterns to determine the version type.
-          search_commit_body: true
+          search_commit_body: false
           # The output method used to generate list of users, 'csv' or 'json'.
           user_format_type: 'csv'
           # Prevents pre-v1.0.0 version from automatically incrementing the major version.
           # If enabled, when the major version is 0, major releases will be treated as minor and minor as patch. Note that the version_type output is unchanged.
-          enable_prerelease_mode: true
+          enable_prerelease_mode: false
           # If enabled, diagnostic information will be added to the action output.
-          debug: false
+          debug: true
           # If true, the branch will be used to select the maximum version.
           version_from_branch: false
