--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,3 +101,9 @@ jobs:
           
       - name: Tag with version
         uses: paulhatch/semantic-version@v5.4.0
+        with:
+          tag_prefix: "v"
+          major_pattern: "(#MAJOR)"
+          minor_pattern: "(#MINOR)"
+          version_format: "${major}.${minor}.${patch}-${increment}"
+          namespace: adc
