--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -99,11 +99,11 @@ jobs:
         with:
           fetch-depth: 0
           
-      - name: Tag with version
+      - name: Increment version
         uses: paulhatch/semantic-version@v5.4.0
         with:
           tag_prefix: "v"
           major_pattern: "(#MAJOR)"
           minor_pattern: "(#MINOR)"
           version_format: "${major}.${minor}.${patch}-${increment}"
-          namespace: adc
+          namespace: adc-web
