--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -105,5 +105,5 @@ jobs:
           tag_prefix: "v"
           major_pattern: "(#MAJOR)"
           minor_pattern: "(#MINOR)"
-          version_format: "${major}.${minor}.${patch}-${increment}"
+          version_format: "${major}.${minor}.${patch}+${increment}"
           namespace: adc-web
