--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -107,4 +107,4 @@ jobs:
           minor_pattern: "(#MINOR)"
           version_format: "${major}.${minor}.${patch}+${increment}"
           namespace: adc-web
-          change_patch: app/src
+          change_path: app/src
