--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,13 +98,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          
+
       - name: Increment version
         uses: paulhatch/semantic-version@v5.4.0
         with:
-          tag_prefix: "v"
-          major_pattern: "(#MAJOR)"
-          minor_pattern: "(#MINOR)"
-          version_format: "${major}.${minor}.${patch}+${increment}"
+          tag_prefix: 'v'
+          major_pattern: '(#MAJOR)'
+          minor_pattern: '(#MINOR)'
+          version_format: '${major}.${minor}.${patch}+${increment}'
           namespace: adc-web
           change_path: app/src
+
+      - name: View version
+        run: echo ${{steps.version}}
