--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,10 +25,9 @@ jobs:
 
       - name: Add version file
         run: |
-          VERSION_FILE=version.html
+          VERSION_FILE=/home/runner/work/adc-website/adc-website/version.html
           VERSION=$GITHUB_REF_NAME
           NEW_CONTENT="<!DOCTYPE html><html lang=\"en\"><head><title>Version</title></head><body>Version: <strong>$VERSION</strong></body></html>"
-          echo "$PWD"
 
       - name: Install dependencies
         run: npm install
