--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,9 @@ jobs:
           VERSION_FILE=/home/runner/work/adc-website/adc-website/version.html
           VERSION=$GITHUB_REF_NAME
           NEW_CONTENT="<!DOCTYPE html><html lang=\"en\"><head><title>Version</title></head><body>Version: <strong>$VERSION</strong></body></html>"
+          echo "VERSION_FILE: $VERSION_FILE"
+          echo "VERSION: $VERSION"
+          echo "NEW_CONTENT: $NEW_CONTENT"
 
       - name: Install dependencies
         run: npm install
