--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,12 +25,13 @@ jobs:
 
       - name: Add version file
         run: |
-          VERSION_FILE=/home/runner/work/adc-website/adc-website/version.html
+          VERSION_FILE=/home/runner/work/adc-website/adc-website/app/src/version.html
           VERSION=$GITHUB_REF_NAME
           NEW_CONTENT="<!DOCTYPE html><html lang=\"en\"><head><title>Version</title></head><body>Version: <strong>$VERSION</strong></body></html>"
           echo "VERSION_FILE: $VERSION_FILE"
           echo "VERSION: $VERSION"
           echo "NEW_CONTENT: $NEW_CONTENT"
+          echo "$NEW_CONTENT" > $VERSION_FILE
 
       - name: Install dependencies
         run: npm install
