--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,14 +25,12 @@ jobs:
 
       - name: Add version file
         run: |
-          VERSION_FILE=/home/runner/work/adc-website/adc-website/app/src/version.html
+          VERSION_FILE_NAME=version.html
+          VERSION_FILE_PATH=${{ github.workspace }}/adc-website/app/src/$VERSION_FILE_NAME
           VERSION=$GITHUB_REF_NAME
           NEW_CONTENT="<!DOCTYPE html><html lang=\"en\"><head><title>Version</title></head><body>Version: <strong>$VERSION</strong></body></html>"
-          echo "VERSION_FILE: $VERSION_FILE"
-          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-          echo "github.workspace: ${{ github.workspace }}"
 
-          echo "$NEW_CONTENT" > $VERSION_FILE
+          echo "$NEW_CONTENT" > $VERSION_FILE_PATH
 
       - name: Install dependencies
         run: npm install
