--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,11 +15,6 @@ jobs:
     environment: production
 
     steps:
-      - name: Validate data
-        run: |
-          echo "Environment ${{ inputs.environment}}"
-          echo "Tag: $GITHUB_REF_NAME"
-
       - name: Checkout repository
         uses: actions/checkout@v4
 
@@ -38,8 +33,14 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-to-assume: arn:aws:iam::030460844096:role/GitHubAction-AssumeRoleWithAction
+          role-session-name: GitHub_to_AWS_via_FederatedOIDC
+          aws-region: ${{ env.AWS_REGION }}
+
+      # Hello from AWS: WhoAmI
+      - name: Sts GetCallerIdentity
+        run: |
+          aws sts get-caller-identity
           aws-region: us-west-1
 
       - name: Deploy application
