--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,9 +27,7 @@ jobs:
           VERSION_FILE_NAME=version.json
           VERSION_FILE_PATH=${{ github.workspace }}/app/src/$VERSION_FILE_NAME
           VERSION=$GITHUB_REF_NAME
-          NEW_CONTENT="{
-                          \"version\": \"$VERSION\"
-                        }"
+          NEW_CONTENT="{\"version\": \"$VERSION\"}"
 
           echo "$NEW_CONTENT" > $VERSION_FILE_PATH
 
