--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,8 +9,8 @@ on:
         type: string
 
 permissions:
-  id-token: write   # This is required for requesting the JWT
-  contents: read    # This is required for actions/checkout
+  id-token: write # This is required for requesting the JWT
+  contents: read # This is required for actions/checkout
 
 jobs:
   deploy:
@@ -25,7 +25,7 @@ jobs:
       - name: Add version file
         run: |
           VERSION_FILE_NAME=version.json
-          VERSION_FILE_PATH=${{ github.workspace }}/app/src/$VERSION_FILE_NAME
+          VERSION_FILE_PATH=${{ github.workspace }}/web/src/$VERSION_FILE_NAME
           VERSION=$GITHUB_REF_NAME
           NEW_CONTENT="{\"version\": \"$VERSION\"}"
 
@@ -70,4 +70,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Smoke test
-        run: bash app/test/scripts/smoke-test.sh https://ascensus.digital
+        run: bash web/test/scripts/smoke-test.sh https://ascensus.digital
