--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,7 +32,9 @@ jobs:
           echo "$NEW_CONTENT" > $VERSION_FILE_PATH
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd ./web
+          npm install
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
