--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,9 @@ jobs:
           fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd ./web
+          npm install
 
       - name: Test and coverage
         run: npm test
