--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,6 +13,19 @@ permissions:
   contents: read # This is required for actions/checkout
 
 jobs:
+  deploy-infra:
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    environment: ${{ inputs.environment }}
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+  
+      - name: Create example bucket
+        run: |
+          cd ./infra
+          cdk deploy
   deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 10
