--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,7 @@ sonar.projectKey=ascensus-digital-consulting_adc-website
 sonar.organization=ascensus-digital-consulting
 sonar.exclusions=coverage/*, web/test/*, infra/*
 sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.coverage.exclusions=coverage/*, web/test/*, infra/*
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=adc-website
