--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "webpack": "^5.97.1"
   },
   "scripts": {
-    "test": "jest --coverage --passWithNoTests"
+    "test": "jest --coverage --passWithNoTests --config=jest.config.json"
   }
 }
