--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,7 +23,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install CDK
-        run: npm install cdk
+        run: npm install -g aws-cdk
   
       - name: Create example bucket
         run: |
