--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,9 @@ on:
       environment:
         required: true
         type: string
+      deploy-args:
+        required: false
+        type: string
 
 permissions:
   id-token: write # This is required for requesting the JWT
@@ -14,33 +17,6 @@ permissions:
 
 jobs:
   deploy-infra:
-    runs-on: ubuntu-latest
-    timeout-minutes: 10
-    environment: ${{ inputs.environment }}
-
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-
-      - name: Install dependencies
-        run: |
-          cd ./infra
-          npm install
-          npm install -g aws-cdk
-
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: arn:aws:iam::030460844096:role/GitHubAction-AssumeRoleWithAction
-          role-session-name: GitHub_to_AWS_via_FederatedOIDC
-          aws-region: us-west-1
-
-      - name: Create example bucket
-        run: |
-          cd ./infra
-          cdk deploy
-
-  deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 10
     environment: ${{ inputs.environment }}
@@ -59,7 +35,10 @@ jobs:
           echo "$NEW_CONTENT" > $VERSION_FILE_PATH
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd ./infra
+          npm install
+          npm install -g aws-cdk
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
@@ -68,18 +47,51 @@ jobs:
           role-session-name: GitHub_to_AWS_via_FederatedOIDC
           aws-region: us-west-1
 
-      - name: Deploy application
-        uses: reggionick/s3-deploy@v4
-        with:
-          folder: web/src
-          bucket: ${{ vars.S3_BUCKET }}
-          bucket-region: ${{ vars.S3_BUCKET_REGION }}
-          dist-id: ${{ vars.CLOUDFRONT_DISTRIBUTION_ID }}
-          invalidation: /
-          delete-removed: true
-          no-cache: true
-          private: true
-          files-to-include: '{.*/**,**}'
+      - name: Create example bucket
+        run: |
+          cd ./infra
+          cdk deploy --require-approval never${{ inputs.deploy-args }}
+
+  # # deploy:
+  # #   runs-on: ubuntu-latest
+  # #   timeout-minutes: 10
+  # #   environment: ${{ inputs.environment }}
+
+  # #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
+
+  #     - name: Add version file
+  #       run: |
+  #         VERSION_FILE_NAME=version.json
+  #         VERSION_FILE_PATH=${{ github.workspace }}/web/src/$VERSION_FILE_NAME
+  #         VERSION=$GITHUB_REF_NAME
+  #         NEW_CONTENT="{\"version\": \"$VERSION\"}"
+
+  #         echo "$NEW_CONTENT" > $VERSION_FILE_PATH
+
+  #     - name: Install dependencies
+  #       run: npm install
+
+  #     - name: Configure AWS credentials
+  #       uses: aws-actions/configure-aws-credentials@v4
+  #       with:
+  #         role-to-assume: arn:aws:iam::030460844096:role/GitHubAction-AssumeRoleWithAction
+  #         role-session-name: GitHub_to_AWS_via_FederatedOIDC
+  #         aws-region: us-west-1
+
+  #     - name: Deploy application
+  #       uses: reggionick/s3-deploy@v4
+  #       with:
+  #         folder: web/src
+  #         bucket: ${{ vars.S3_BUCKET }}
+  #         bucket-region: ${{ vars.S3_BUCKET_REGION }}
+  #         dist-id: ${{ vars.CLOUDFRONT_DISTRIBUTION_ID }}
+  #         invalidation: /
+  #         delete-removed: true
+  #         no-cache: true
+  #         private: true
+  #         files-to-include: '{.*/**,**}'
 
   smoke-test:
     runs-on: ubuntu-latest
